Bug 49621 - [Bisected SNB]Ogles2conform GL_equal_equal_bvec2_frag.test regressed
Summary: [Bisected SNB]Ogles2conform GL_equal_equal_bvec2_frag.test regressed
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All Linux (All)
: high major
Assignee: Chad Versace
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-08 01:57 UTC by lu hua
Modified: 2012-06-27 00:22 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2012-05-08 01:57:30 UTC
System Environment:
--------------------------
Arch:             i386
Platform:         Sandybridge
Libdrm:		(master)2.4.33-20-gd72a44c7c4f5eea9c1e5bb0c36cb9e0224b9ca22
Mesa:		(master)c19672f90a653a8bd6adcc35e294b7150b34f9e7
Xf86_video_intel:(master)2.19.0-25-g4ba366ead3a133136554579fe9a604da1fc1da68
Libva:		(vaapi-ext)aa8d1caa96eb2f83f4e24d7a7f400a675f6611d0
Kernel:	(drm-intel-next-queued) b615b57a124a4af7b68196bc2fb8acc236041fa2

Bug detailed description:
-----------------------------
It fails on sandybridge with mesa master branch.It doesn't happen on mesa 8.0 branch.
Following cases also fail with the same commit:
GL_equal_equal_bvec3_frag.test
GL_notEqual_notEqual_bvec2_frag.test
GL_notEqual_notEqual_bvec3_frag.test

Bisect shows:dc42910e98dc00760255cc4579da458de09175b9 is the first bad commit
commit dc42910e98dc00760255cc4579da458de09175b9
Author:     Eric Anholt <eric@anholt.net>
AuthorDate: Mon Apr 23 16:48:09 2012 -0700
Commit:     Eric Anholt <eric@anholt.net>
CommitDate: Fri May 4 14:00:32 2012 -0700

    i965/fs: Fix regression in comparison handling from ANDs change.

    I had fixed up the logic ops for delayed ANDing, but not equality
    comparisons on bools.  Fixes new piglit fs-bool-less-compare-true.

    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=48629
Comment 1 Chad Versace 2012-06-13 19:31:35 UTC
I have a patch that fixes this. But it's late and I'm sleepy. I'll clean it up and post it tomorrow.
Comment 2 Chad Versace 2012-06-15 11:02:10 UTC
Posted a fix for this on mesa-dev. Waiting for review.

http://lists.freedesktop.org/archives/mesa-dev/2012-June/022974.html
Comment 3 Chad Versace 2012-06-25 15:57:51 UTC
Marking RESOLVED/FIXED. Fixed on master with

commit cf0bbb30f6bd9d3fa61b5207320e8f34c563a2c6
Author: Chad Versace <chad.versace@linux.intel.com>
Date:   Thu Jun 21 11:35:03 2012 -0700

    i965/fs: Fix conversions float->bool, int->bool
Comment 4 lu hua 2012-06-27 00:22:55 UTC
Verified. It has been fixed on mesa master branch commit 3bc39414ab960ecd77662e41c8df751c2c9c8984.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.